salesforce_sfdx/main/default/objects/QuoteLineItem/QuoteLineItem.object-meta.xml
<CustomObject>


    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>