salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_Number_of_Contracted_Months__c.field-meta.xml
<CustomField>
    <fullName>Otter_Number_of_Contracted_Months__c</fullName>
    <description>Number of contracted months (from the parent quote)</description>
    <formula>Quote.vlocity_cmt__NumberOfContractedMonths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of contracted months (from the parent quote)</inlineHelpText>
    <label>Number of Contracted Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>