salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_One_Time_Margin__c.field-meta.xml
<CustomField>
    <fullName>Otter_One_Time_Margin__c</fullName>
    <description>One time total price less one time total cost</description>
    <formula>vlocity_cmt__EffectiveOneTimeTotal__c - vlocity_cmt__EffectiveOneTimeCostTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>One time total price less one time total cost</inlineHelpText>
    <label>One Time Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>