salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_One_Time_Margin_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Otter_One_Time_Margin_Guidance__c</fullName>
    <defaultValue>0.15</defaultValue>
    <description>Suggested baseline one time margin value. A quote line that does not meet the guidelines is generally required to follow a special pricing review process</description>
    <inlineHelpText>Suggested baseline one time margin value. A quote line that does not meet the guidelines is generally required to follow a special pricing review process</inlineHelpText>
    <label>One Time Margin Guidance, %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>