salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_One_Time_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Otter_One_Time_Margin_Pct__c</fullName>
    <description>One time margin divided by one time price</description>
    <formula>Otter_One_Time_Margin__c /  vlocity_cmt__EffectiveOneTimeTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>One time margin divided by one time price</inlineHelpText>
    <label>One Time Margin, %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>