salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_Quote_Line_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Otter_Quote_Line_Total_Cost__c</fullName>
    <description>Total quote line cost for a provider over the period of contract duration. If contract duration is not specified, it is assumed 1 month by default</description>
    <formula>if (and(not(isblank(Otter_Number_of_Contracted_Months__c)), Otter_Number_of_Contracted_Months__c &lt;&gt; 0), 
  Otter_Number_of_Contracted_Months__c * vlocity_cmt__EffectiveRecurringCostTotal__c + vlocity_cmt__EffectiveOneTimeCostTotal__c, 
  vlocity_cmt__EffectiveRecurringCostTotal__c + vlocity_cmt__EffectiveOneTimeCostTotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total quote line cost for a provider over the period of contract duration. If contract duration is not specified, it is assumed 1 month by default</inlineHelpText>
    <label>Quote Line Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>