salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_Quote_Line_Total_Margin__c.field-meta.xml
<CustomField>
    <fullName>Otter_Quote_Line_Total_Margin__c</fullName>
    <description>Quote Line Total Charge - Quote Line Total Cost</description>
    <formula>Otter_Quote_Line_Total_Charge__c -  Otter_Quote_Line_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quote Line Total Charge - Quote Line Total Cost</inlineHelpText>
    <label>Quote Line Total Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>