salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_Quote_Line_Total_Margin_Guidance_P__c.field-meta.xml
<CustomField>
    <fullName>Otter_Quote_Line_Total_Margin_Guidance_P__c</fullName>
    <defaultValue>0.20</defaultValue>
    <description>Quote Line Total margin guidance. If a quote does not meet the guidance requirement, it generally needs to follow a pricing review process</description>
    <inlineHelpText>Quote Line Total margin guidance. If a quote does not meet the guidance requirement, it generally needs to follow a pricing review process</inlineHelpText>
    <label>Quote Line Total Margin Guidance, %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>