salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_Quote_Line_Total_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Otter_Quote_Line_Total_Margin_Pct__c</fullName>
    <description>Quote Line Total Margin / Quote Line Total Charge</description>
    <formula>Otter_Quote_Line_Total_Margin__c /  Otter_Quote_Line_Total_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quote Line Total Margin / Quote Line Total Charge</inlineHelpText>
    <label>Quote Line Total Margin, %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>