salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_Quote_Line_Total_Margin_Validation__c.field-meta.xml
<CustomField>
    <fullName>Otter_Quote_Line_Total_Margin_Validation__c</fullName>
    <description>Indicates either the quote line meets (or not) the quote margin guidelines</description>
    <formula>if(AND(NOT(ISBLANK(Otter_Quote_Line_Total_Margin_Pct__c)), NOT(ISBLANK(Otter_Quote_Line_Total_Margin_Guidance_P__c))),
  if(Otter_Quote_Line_Total_Margin_Pct__c &lt; Otter_Quote_Line_Total_Margin_Guidance_P__c, &quot;❌&quot;, &quot;✔&quot;), 
  &quot;No margin data available yet&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates either the quote line meets (or not) the quote margin guidelines</inlineHelpText>
    <label>Quote Line Total Margin Validation</label>
    <type>Text</type>
</CustomField>