salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_Recurring_Margin__c.field-meta.xml
<CustomField>
    <fullName>Otter_Recurring_Margin__c</fullName>
    <description>Recurring total price less recurring total cost</description>
    <formula>vlocity_cmt__EffectiveRecurringTotal__c - vlocity_cmt__EffectiveRecurringCostTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Recurring total price less recurring total cost</inlineHelpText>
    <label>Recurring Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>