salesforce_sfdx/main/default/objects/QuoteLineItem/fields/Otter_Recurring_Margin_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Otter_Recurring_Margin_Guidance__c</fullName>
    <defaultValue>0.25</defaultValue>
    <description>Suggested baseline recurring margin value. A quote line that does not meet the guidelines is generally required to follow a special pricing review process</description>
    <inlineHelpText>Suggested baseline recurring margin value. A quote line that does not meet the guidelines is generally required to follow a special pricing review process</inlineHelpText>
    <label>Recurring Margin Guidance, %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>